--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "ig-cfd-cli",
     "version": "0.0.3",
-    "description": "cli tool and API for the IG CFDs API.",
+    "description": "CLI tool and API for the IG CFDs API.",
     "main": "build/index.js",
     "types": "build/index.d.ts",
     "scripts": {
